--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/css/style.css">
-    <title>Menu</title>
-</head>
-<body>
-
-    <div class="menu">
-        <div class="menu__bar">
-            <div class="bar-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque accusamus eius suscipit aut esse numquam nulla illum porro nisi, hic earum, ipsa voluptate rem vel quaerat debitis perspiciatis voluptatibus dolores?</p>
-                <p class="close">Close</p>
-            </div>
-        </div>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Document</title>
+  </head>
+  <link rel="stylesheet" href="dist/css/style.css"/>
+  <body></body>
+  <div class="menu">
+    <div class="menu__bar">
+      <div class="bar-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="close">Close</p>
+      </div>
     </div>
-
-    <div class="global">
-        <p>Lorem ipsum dolor sit amet</p>
-
-        <div class="open">
-            Press this text to open
-        </div>
+  </div>
+  <div class="global">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="open">
+      <p>Press this text for open</p>
     </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
-<script src="js/main.js" charset="utf-8"></script>
-</body>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </html>
